urls and views modified

--- a/MyProject/Templates/webseries.html
+++ b/MyProject/Templates/webseries.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no, maximum-scale=1">    <title>First Impression</title>
-    <link rel="stylesheet" href="../style.css">
-    <link rel="stylesheet" href="../movies/movies.css">
-    <link rel="stylesheet" href="webseries.css">
+    <link rel="stylesheet" href="../static/style.css">
+    <link rel="stylesheet" href="../static/movies.css">
+    <link rel="stylesheet" href="../static/webseries.css">
     <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Quicksand:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -19,11 +19,11 @@
 
     
     <header class="header">
-        <img src="../websiteLogo.png" class="head-img" alt="firstimpression" />
+        <img src="../static/websiteLogo.png" class="head-img" alt="firstimpression" />
         <!-- Navigation bar -->
         <ul id="navBar">
-            <li class="item"><a class="aitems" href="../index.html">Home</a></li>
-            <li class="item"><a class="aitems" href="../movies/movies.html">Movies</a></li>
+            <li class="item"><a class="aitems" href="index.html">Home</a></li>
+            <li class="item"><a class="aitems" href="movies.html">Movies</a></li>
             <li class="item"><a class="aitems" href="webseries.html">Web Series</a></li>
             <li class="item"><a class="aitems" href="about.html">About Us</a></li>
             <li class="item"><a class="aitems" href="contact.html">Contact Us</a></li>
@@ -33,7 +33,7 @@
                 <form action="https://www.google.com/">     <!--should add server pointer to search -->
                 <input type="text" placeholder="type here to search" name="search">
                 <button type="submit">
-                    <img src="../searchIcon.png" alt="searchButton" class="SearchImg">
+                    <img src="../static/searchIcon.png" alt="searchButton" class="SearchImg">
                     <div class="hide">Search</div>
                 </button>
                 </form>
@@ -57,7 +57,7 @@
                 <a class="Arrow" href="#"><i class="fa">&#xf053;</i></a>
 
                 <div class="container">
-                    <img src="../movie1.jpg" alt="image" class="image1">
+                    <img src="../static/movie1.jpg" alt="image" class="image1">
                     <p class="p">FAST & FURIOUS 9 </p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -65,7 +65,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="../movie1.jpg" alt="image" class="image1">
+                    <img src="../static/movie1.jpg" alt="image" class="image1">
                     <p class="p">FAST & FURIOUS 9</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -73,7 +73,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="../movie1.jpg" alt="image" class="image1">
+                    <img src="../static/movie1.jpg" alt="image" class="image1">
                     <p class="p">FAST & FURIOUS 9</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -82,7 +82,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="../movie1.jpg" alt="image" class="image1">
+                    <img src="../static/movie1.jpg" alt="image" class="image1">
                     <p class="p">FAST & FURIOUS 9</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -91,7 +91,7 @@
 
 
                 <div class="container">
-                    <img src="../movie1.jpg" alt="image" class="image1">
+                    <img src="../static/movie1.jpg" alt="image" class="image1">
                     <p class="p">FAST & FURIOUS 9</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -119,7 +119,7 @@
 
 
                 <div class="container">
-                    <img src="../wseries2.jpg" alt="image" class="image1">
+                    <img src="../static/wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -127,7 +127,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="../wseries2.jpg" alt="image" class="image1">
+                    <img src="../static/wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -135,7 +135,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="../wseries2.jpg" alt="image" class="image1">
+                    <img src="../static/wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -144,7 +144,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="../wseries2.jpg" alt="image" class="image1">
+                    <img src="../static/wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -153,7 +153,7 @@
 
 
                 <div class="container">
-                    <img src="../wseries2.jpg" alt="image" class="image1">
+                    <img src="../static/wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -181,7 +181,7 @@
 
 
                 <div class="container">
-                    <img src="../wseries2.jpg" alt="image" class="image1">
+                    <img src="../static/wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -189,7 +189,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="../wseries2.jpg" alt="image" class="image1">
+                    <img src="../static/wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -197,7 +197,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="../wseries2.jpg" alt="image" class="image1">
+                    <img src="../static/wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -206,7 +206,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="../wseries2.jpg" alt="image" class="image1">
+                    <img src="../static/wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -215,7 +215,7 @@
 
 
                 <div class="container">
-                    <img src="../wseries2.jpg" alt="image" class="image1">
+                    <img src="../static/wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -242,7 +242,7 @@
 
 
                 <div class="container">
-                    <img src="../wseries2.jpg" alt="image" class="image1">
+                    <img src="../static/wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -250,7 +250,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="../wseries2.jpg" alt="image" class="image1">
+                    <img src="../static/wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -258,7 +258,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="../wseries2.jpg" alt="image" class="image1">
+                    <img src="../static/wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -267,7 +267,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="../wseries2.jpg" alt="image" class="image1">
+                    <img src="../static/wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -276,7 +276,7 @@
 
 
                 <div class="container">
-                    <img src="../wseries2.jpg" alt="image" class="image1">
+                    <img src="../static/wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -303,7 +303,7 @@
 
 
                 <div class="container">
-                    <img src="../wseries2.jpg" alt="image" class="image1">
+                    <img src="../static/wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -311,7 +311,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="../wseries2.jpg" alt="image" class="image1">
+                    <img src="../static/wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -319,7 +319,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="../wseries2.jpg" alt="image" class="image1">
+                    <img src="../static/wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -328,7 +328,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="../wseries2.jpg" alt="image" class="image1">
+                    <img src="../static/wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -337,7 +337,7 @@
 
 
                 <div class="container">
-                    <img src="../wseries2.jpg" alt="image" class="image1">
+                    <img src="../static/wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -365,7 +365,7 @@
 
 
                 <div class="container">
-                    <img src="../wseries2.jpg" alt="image" class="image1">
+                    <img src="../static/wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -373,7 +373,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="../wseries2.jpg" alt="image" class="image1">
+                    <img src="../static/wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -381,7 +381,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="../wseries2.jpg" alt="image" class="image1">
+                    <img src="../static/wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -390,7 +390,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="../wseries2.jpg" alt="image" class="image1">
+                    <img src="../static/wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -399,7 +399,7 @@
 
 
                 <div class="container">
-                    <img src="../wseries2.jpg" alt="image" class="image1">
+                    <img src="../static/wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -521,9 +521,9 @@
             <p class="footerText">Follow Us</p>
 
             <ul id="footerLinks">
-                <li class="aSlink"><a href="https://www.instagram.com/" target="blank"><img class="LinkImg" src="../instagram.png" alt="instagram"></a></li>
-                <li class="aSlink"><a href="https://www.facebook.com/" target="blank"><img class="LinkImg" src="../facebook.png" alt="instagram"></a></li>
-                <li class="aSlink"><a href="https://twitter.com/" target="blank"><img class="LinkImg" src="../Twitter.png" alt="instagram"></a></li>
+                <li class="aSlink"><a href="https://www.instagram.com/" target="blank"><img class="LinkImg" src="../static/instagram.png" alt="instagram"></a></li>
+                <li class="aSlink"><a href="https://www.facebook.com/" target="blank"><img class="LinkImg" src="../static/facebook.png" alt="instagram"></a></li>
+                <li class="aSlink"><a href="https://twitter.com/" target="blank"><img class="LinkImg" src="../static/Twitter.png" alt="instagram"></a></li>
                 
                 <li class="PrivacyLink"><a class="aPrivacy" href="#" target="blank">Pivacy Policy</a></li>
                 <li class="PrivacyLink"><a class="aPrivacy" href="#" target="blank">Terms & Conditions</a></li>
