--- a/MyProject/Templates/movies.html
+++ b/MyProject/Templates/movies.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no, maximum-scale=1">    <title>First Impression</title>
-    <link rel="stylesheet" href="../style.css">
-    <link rel="stylesheet" href="movies.css">
-    <link rel="stylesheet" href="../series/webseries.css">
+    <link rel="stylesheet" href="../static/style.css">
+    <link rel="stylesheet" href="../static/movies.css">
+    <link rel="stylesheet" href="../static/webseries.css">
     <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Quicksand:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -19,12 +19,12 @@
 
     
     <header class="header">
-        <img src="../websiteLogo.png" class="head-img" alt="firstimpression" />
+        <img src="../static/websiteLogo.png" class="head-img" alt="firstimpression" />
         <!-- Navigation bar -->
         <ul id="navBar">
-            <li class="item"><a class="aitems" href="../index.html">Home</a></li>
+            <li class="item"><a class="aitems" href="index.html">Home</a></li>
             <li class="item"><a class="aitems" ihref="movies.html">Movies</a></li>
-            <li class="item"><a class="aitems" href="../series/webseries.html">Web Series</a></li>
+            <li class="item"><a class="aitems" href="webseries.html">Web Series</a></li>
             <li class="item"><a class="aitems" href="about.html">About Us</a></li>
             <li class="item"><a class="aitems" href="contact.html">Contact Us</a></li>
             <li class="item"><a class="aitems" href="profile.html" target="blank">Profile</a></li>
@@ -33,7 +33,7 @@
                 <form action="https://www.google.com/">     <!--should add server pointer to search -->
                 <input type="text" placeholder="type here to search" name="search">
                 <button type="submit">
-                    <img src="../searchIcon.png" alt="searchButton" class="SearchImg">
+                    <img src="../static/searchIcon.png" alt="searchButton" class="SearchImg">
                     <div class="hide">Search</div>
                 </button>
                 </form>
@@ -56,7 +56,7 @@
                 <a class="Arrow" href="#"><i class="fa">&#xf053;</i></a>
 
                 <div class="container">
-                    <img src="../movie1.jpg" alt="image" class="image1">
+                    <img src="../static/movie1.jpg" alt="image" class="image1">
                     <p class="p">FAST & FURIOUS 9 </p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -64,7 +64,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="../movie1.jpg" alt="image" class="image1">
+                    <img src="../static/movie1.jpg" alt="image" class="image1">
                     <p class="p">FAST & FURIOUS 9</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -72,7 +72,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="../movie1.jpg" alt="image" class="image1">
+                    <img src="../static/movie1.jpg" alt="image" class="image1">
                     <p class="p">FAST & FURIOUS 9</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -81,7 +81,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="../movie1.jpg" alt="image" class="image1">
+                    <img src="../static/movie1.jpg" alt="image" class="image1">
                     <p class="p">FAST & FURIOUS 9</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -90,7 +90,7 @@
 
 
                 <div class="container">
-                    <img src="../movie1.jpg" alt="image" class="image1">
+                    <img src="../static/movie1.jpg" alt="image" class="image1">
                     <p class="p">FAST & FURIOUS 9</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -119,7 +119,7 @@
 
 
                 <div class="container">
-                    <img src="../wseries2.jpg" alt="image" class="image1">
+                    <img src="../static/wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -127,7 +127,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="../wseries2.jpg" alt="image" class="image1">
+                    <img src="../static/wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -135,7 +135,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="../wseries2.jpg" alt="image" class="image1">
+                    <img src="../static/wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -144,7 +144,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="../wseries2.jpg" alt="image" class="image1">
+                    <img src="../static/wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -153,7 +153,7 @@
 
 
                 <div class="container">
-                    <img src="../wseries2.jpg" alt="image" class="image1">
+                    <img src="../static/wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -179,7 +179,7 @@
 
 
                 <div class="container">
-                    <img src="../wseries2.jpg" alt="image" class="image1">
+                    <img src="../static/wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -187,7 +187,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="../wseries2.jpg" alt="image" class="image1">
+                    <img src="../static/wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -195,7 +195,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="../wseries2.jpg" alt="image" class="image1">
+                    <img src="../static/wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -204,7 +204,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="../wseries2.jpg" alt="image" class="image1">
+                    <img src="../static/wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -213,7 +213,7 @@
 
 
                 <div class="container">
-                    <img src="../wseries2.jpg" alt="image" class="image1">
+                    <img src="../static/wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -331,9 +331,9 @@
             <p class="footerText">Follow Us</p>
 
             <ul id="footerLinks">
-                <li class="aSlink"><a href="https://www.instagram.com/" target="blank"><img class="LinkImg" src="../instagram.png" alt="instagram"></a></li>
-                <li class="aSlink"><a href="https://www.facebook.com/" target="blank"><img class="LinkImg" src="../facebook.png" alt="instagram"></a></li>
-                <li class="aSlink"><a href="https://twitter.com/" target="blank"><img class="LinkImg" src="../Twitter.png" alt="instagram"></a></li>
+                <li class="aSlink"><a href="https://www.instagram.com/" target="blank"><img class="LinkImg" src="../static/instagram.png" alt="instagram"></a></li>
+                <li class="aSlink"><a href="https://www.facebook.com/" target="blank"><img class="LinkImg" src="../static/facebook.png" alt="instagram"></a></li>
+                <li class="aSlink"><a href="https://twitter.com/" target="blank"><img class="LinkImg" src="../static/Twitter.png" alt="instagram"></a></li>
                 
                 <li class="PrivacyLink"><a class="aPrivacy" href="#" target="blank">Pivacy Policy</a></li>
                 <li class="PrivacyLink"><a class="aPrivacy" href="#" target="blank">Terms & Conditions</a></li>
