--- a/MyProject/Templates/base.html
+++ b/MyProject/Templates/base.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../static/style.css">
     <link rel="stylesheet" href="../static/movies.css">
     <link rel="stylesheet" href="../static/webseries.css">
+    <link rel="stylesheet" href="../static/contact.css">
     <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Quicksand:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
