--- a/MyProject/Templates/base.html
+++ b/MyProject/Templates/base.html
@@ -22,61 +22,22 @@
 
 <body>
     
-    <!-- ------------------------------------- Header Section ---------------------------------------->
+<!-- ------------------------------------- Header Section ---------------------------------------->
 
-
-    <header class="header">
-        <img src="{% static '/websiteLogo.png' %}" class="head-img" alt="firstimpression" />
-        <!-- Navigation bar -->
-        <ul id="navBar">
-            <li class="item"><a class="aitems" href="index.html">Home</a></li>
-            <li class="item"><a class="aitems" href="movies.html">Movies</a></li>
-            <li class="item"><a class="aitems" href="webseries.html">Web Series</a></li>
-            <li class="item"><a class="aitems" href="about.html">About Us</a></li>
-            <li class="item"><a class="aitems" href="contact.html">Contact Us</a></li>
-            <li class="item"><a class="aitems" href="profile.html" target="blank">Profile</a></li>
-            <!-- search bar -->
-            <div class="searchContainer">
-                <form action="https://www.google.com/">     <!--should add server pointer to search -->
-                <input type="text" placeholder="type here to search" name="search">
-                <button type="submit">
-                    <img src="{% static '/searchIcon.png' %}" alt="searchButton" class="SearchImg">
-                    <div class="hide">Search</div>
-                </button>
-                </form>
-            </div> 
-        </ul>
-    </header>
+{% include 'includes/navbar.html' %}
+    
 
     {% block content %}
     {% endblock %}
 
-
 <!--------------------------------------- Footer Section -------------------------------------->
 
 
-    <footer class="footer">
-        <p class="footerNote">© 2020-2021   ||    First Impression</p>
-        <br>
-        <section>
-            <p class="footerText">Follow Us</p>
-
-            <ul id="footerLinks">
-                <li class="aSlink"><a href="https://www.instagram.com/" target="blank"><img class="LinkImg" src="{% static '/instagram.png' %}" alt="instagram"></a></li>
-                <li class="aSlink"><a href="https://www.facebook.com/" target="blank"><img class="LinkImg" src="{% static '/facebook.png' %}" alt="instagram"></a></li>
-                <li class="aSlink"><a href="https://twitter.com/" target="blank"><img class="LinkImg" src="{% static '/Twitter.png' %}" alt="instagram"></a></li>
-                
-                <li class="PrivacyLink"><a class="aPrivacy" href="#" target="blank">Pivacy Policy</a></li>
-                <li class="PrivacyLink"><a class="aPrivacy" href="#" target="blank">Terms & Conditions</a></li>
-            </ul>
-
-        </section>
-    </footer>
+{% include 'includes/footer.html' %}
 
 
 
 </body>
-
 
 
 </html>
