--- a/MyProject/Templates/base.html
+++ b/MyProject/Templates/base.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" href="{% static 'css/movies.css' %}">
     <link rel="stylesheet" href="{% static 'css/webseries.css' %}">
-    <link rel="stylesheet" href="{% static 'css/contact.css' %}">
+    <link rel="stylesheet" href="{% static 'css/contactus.css' %}">
     
     <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Quicksand:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -22,13 +22,14 @@
 
 <body>
     
-<!-- ------------------------------------- Header Section ---------------------------------------->
+<!--------------------------------------- Header Section ---------------------------------------->
 
 {% include 'includes/navbar.html' %}
     
 
     {% block content %}
     {% endblock %}
+
 
 <!--------------------------------------- Footer Section -------------------------------------->
 
