--- a/MyProject/Templates/webpages/contact.html
+++ b/MyProject/Templates/webpages/contact.html
@@ -3,30 +3,44 @@
 
 
 {% block content %}
-<div class="kb-33">
+<section class="SectionContactForm">
 
 
-  <div class=mb-33>
-    <label for="exampleFormControlInput1" class="form-label"></label>
-    <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Full Name">
-  </div>
+  <form>
 
-  <div class=mb-334>
-    <label for="exampleFormControlInput1" class="form-label"></label>
-    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Email">
-  </div>
+    <div class="kb-33">
 
+      <div class=mb-33>
+        <label for="exampleFormControlInput1" class="form-label"></label>
+        <input type="text" placeholder="Full Name">
+      </div>
 
-</div>
+      <div class=mb-334>
+        <label for="exampleFormControlInput1" class="form-label"></label>
+        <input type="email" placeholder="Email">
+      </div>
 
-    <div class=mb-34>
-      <label for="exampleFormControlInput1" class="form-label"></label>
-      <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Subject">
     </div>
 
-    <div class=mb-34>
-      <label for="exampleFormControlTextarea1" class="form-label" ></label>
-      <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Enter The Message Here"></textarea>
+    <div class="FI-33">
+
+      <div class=mb-34>
+        <label for="exampleFormControlInput1" class="form-label"></label>
+        <input type="password" placeholder="Phone Number">
+      </div>
+
+      <div class=mb-334>
+        <label for="exampleFormControlInput1" class="form-label"></label>
+        <input type="text" placeholder="Subject">
+      </div>
+
     </div>
+
+
+  </form>
+
+</section>
+
+ 
 
 {% endblock %}
