--- a/MyProject/static/css/contactus.css
+++ b/MyProject/static/css/contactus.css
@@ -1,8 +1,20 @@
-.mb-33{
 
-  border-radius: 5px;
-  background-color: #f2f2f2;
-  padding: 20px;
+.kb-33{
+  display: flex;
+  margin-top: 120px;
+  margin-left: 10px;
   
+}
+
+.mb-334{
+  margin-left: 10px;
+}
+
+
+
+.FI-33{
+  display: flex;
+  margin-top: 20px;
+  margin-left: 10px;
 }
 
