--- a/MyProject/MyProject/static/css/contactus.css
+++ b/MyProject/MyProject/static/css/contactus.css
@@ -1,9 +1,12 @@
+.ContactUsPage {
+  background: linear-gradient(to bottom, #f7f7f7 0%, #fff 100%);
+}
 
 .kb-33{
   display: flex;
-  margin-top: 120px;
-  margin-left: 10px;
-  
+  margin-top: 60px;
+  margin-left: 115px;
+  border-radius: 5px;  
 }
 
 .mb-334{
@@ -14,7 +17,78 @@
 
 .FI-33{
   display: flex;
+  margin-top: 30px;
+  margin-left: 115px;
+  border-radius: 5px;
+}
+
+#country {
+
+  margin-left: 10px;
+  width: 17.5%;
+}
+
+.mb-3332 {
   margin-top: 20px;
   margin-left: 10px;
 }
+
+.subjectForm {
+  width: 31.5%;
+}
+
+.MessageForm {
+  margin-top: 30px;
+  margin-left: 115px;
+}
+textarea{
+  width: 35.5%;
+}
+
+.ContactButton {
+  margin-top: 30px;
+  margin-left: 251px;
+  
+}
+
+.ContactSubmit {
+  background-color: #4CAF50;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-bottom: 30px;
+}
+
+
+.pixabayImage {
+  width: 100%;
+  height: 360px;
+}
+
+.bannerImage h1 {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 35 px;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: normal;
+  font-style: italic;
+  font-weight: bolder;
+}
+
+.headingContact{
+  margin-top: 25px;
+  text-align: center;
+  font-family: 'Courgette', cursive;
+}
+
+.headingContactpara{
+  margin-top: 5px;
+  text-align: center;
+  font-family: 'Courgette', cursive;
+}
+
 
