--- a/MyProject/Templates/base.html
+++ b/MyProject/Templates/base.html
@@ -13,9 +13,12 @@
     <link rel="stylesheet" href="{% static 'css/webseries.css' %}">
     <link rel="stylesheet" href="{% static 'css/contactus.css' %}">
     
+    
     <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Quicksand:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet"> 
 
 </head>
 
