--- a/MyProject/static/css/contactus.css
+++ b/MyProject/static/css/contactus.css
@@ -83,6 +83,7 @@ textarea{
   margin-top: 25px;
   text-align: center;
   font-family: 'Courgette', cursive;
+  color: crimson;
 }
 
 .headingContactpara{
