static andd templates

--- a/MyProject/Templates/webpages/about.html
+++ b/MyProject/Templates/webpages/about.html
@@ -1,7 +1,61 @@
 {% extends 'base.html' %}
 
+{% load static %}
+
 
 
 {% block content %}
+
+
+<main class="aboutUspage">
+    <section class="aboutContainer">
+
+        <div class="aboutSecPg">
+            <div class="imagePixabt">
+              <img src="https://cdn.pixabay.com/photo/2017/07/16/07/50/imprint-2508603_960_720.jpg" alt="About Us" class="img-about">
+            </div>
+
+            <div class="ProjectSecpg">
+                <h2 class="aboutProjectpg">About Project</h2>
+                <p class="aboutProjectpara">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                    Corrupti, doloremque. Nulla voluptatibus omnis quos adipi
+                    sci nihil totam culpa necessitatibus quam recusandae quid
+                    em doloribus pariatur nostrum voluptas vero explicabo quo
+                    d itaque, quo, harum, modi quaerat? Lorem ipsum dolor, si
+                    amet consectetur adipisicing elit.dfvdg djd kekw iodf oko
+                    Corrupti, doloremque. Nulla voluptatibus omnis quos adipi
+                    sci nihil totam culpa necessitatibus quam recusandae quid
+                    em doloribus pariatur nostrum voluptas vero explicabo quo
+                    d itaque, quo, harum, modi quaerat? dfg gggg  serwerwer r
+                </p>
+            </div>
+
+            <div>
+                <h2 class="foundingPg">Our Founders</h2>
+
+                <div class="container">
+                    <img src="https://www.vecteezy.com/vector-art/241137-boy-with-glasses" alt="image" class="image1">
+                    <p class="p">FAST & FURIOUS 9 </p>
+                                    
+                </div>
+
+                <div class="container">
+                    <img src="../static/movie1.jpg" alt="image" class="image1">
+                    <p class="p">FAST & FURIOUS 9</p>
+                           
+                </div>
+
+
+            </div>
+
+        </div>
+
+
+
+    </section>
+
+
+</main>
 
 {% endblock %}
