--- a/MyProject/Templates/webpages/index.html
+++ b/MyProject/Templates/webpages/index.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% load static %}
+
 
 
 {% block content %}
@@ -19,7 +21,7 @@
             <div id="MovieSection">
 
                 <div class="container">
-                    <img src="../static/movie1.jpg" alt="image" class="image1">
+                    <img src="{% static '/movie1.jpg' %}" alt="image" class="image1">
                     <p class="p">FAST & FURIOUS 9 </p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -27,7 +29,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="../static/movie1.jpg" alt="image" class="image1">
+                    <img src="{% static '/movie1.jpg' %}" alt="image" class="image1">
                     <p class="p">FAST & FURIOUS 9</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -35,7 +37,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="../static/movie1.jpg" alt="image" class="image1">
+                    <img src="{% static '/movie1.jpg' %}" alt="image" class="image1">
                     <p class="p">FAST & FURIOUS 9</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -44,7 +46,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="../static/movie1.jpg" alt="image" class="image1">
+                    <img src="{% static '/movie1.jpg' %}" alt="image" class="image1">
                     <p class="p">FAST & FURIOUS 9</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -53,7 +55,7 @@
 
 
                 <div class="container">
-                    <img src="../static/movie1.jpg" alt="image" class="image1">
+                    <img src="{% static '/movie1.jpg' %}" alt="image" class="image1">
                     <p class="p">FAST & FURIOUS 9</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -78,7 +80,7 @@
             <div id="MovieSection">
 
                 <div class="container">
-                    <img src="../static/wseries2.jpg" alt="image" class="image1">
+                    <img src="{% static '/wseries2.jpg' %}" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -86,7 +88,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="../static/wseries2.jpg" alt="image" class="image1">
+                    <img src="{% static '/wseries2.jpg' %}" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -94,7 +96,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="../static/wseries2.jpg" alt="image" class="image1">
+                    <img src="{% static '/wseries2.jpg' %}" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -103,7 +105,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="../static/wseries2.jpg" alt="image" class="image1">
+                    <img src="{% static '/wseries2.jpg' %}" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -112,7 +114,7 @@
 
 
                 <div class="container">
-                    <img src="../static/wseries2.jpg" alt="image" class="image1">
+                    <img src="{% static '/wseries2.jpg' %}" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -134,7 +136,7 @@
             <div id="MovieSection">
 
                 <div class="container">
-                    <img src="../static/wseries2.jpg" alt="image" class="image1">
+                    <img src="{% static '/wseries2.jpg' %}" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -142,7 +144,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="../static/wseries2.jpg" alt="image" class="image1">
+                    <img src="{% static '/wseries2.jpg' %}" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -150,7 +152,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="../static/wseries2.jpg" alt="image" class="image1">
+                    <img src="{% static '/wseries2.jpg' %}" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -159,7 +161,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="../static/wseries2.jpg" alt="image" class="image1">
+                    <img src="{% static '/wseries2.jpg' %}" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -168,7 +170,7 @@
 
 
                 <div class="container">
-                    <img src="../static/wseries2.jpg" alt="image" class="image1">
+                    <img src="{% static '/wseries2.jpg' %}" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -192,7 +194,7 @@
             <div id="MovieSection">
 
                 <div class="container">
-                    <img src="../static/wseries2.jpg" alt="image" class="image1">
+                    <img src="{% static '/wseries2.jpg' %}" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -200,7 +202,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="../static/wseries2.jpg" alt="image" class="image1">
+                    <img src="{% static '/wseries2.jpg' %}" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -208,7 +210,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="../static/wseries2.jpg" alt="image" class="image1">
+                    <img src="{% static '/wseries2.jpg' %}" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -217,7 +219,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="../static/wseries2.jpg" alt="image" class="image1">
+                    <img src="{% static '/wseries2.jpg' %}" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -226,7 +228,7 @@
 
 
                 <div class="container">
-                    <img src="../static/wseries2.jpg" alt="image" class="image1">
+                    <img src="{% static '/wseries2.jpg' %}" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
