--- a/MyProject/Templates/webpages/movies.html
+++ b/MyProject/Templates/webpages/movies.html
@@ -1,5 +1,7 @@
+
 {% extends 'base.html' %}
 
+{% load static %}
 
 
     {% block content %}
@@ -19,7 +21,7 @@
                 <a class="Arrow" href="#"><i class="fa">&#xf053;</i></a>
 
                 <div class="container">
-                    <img src="../static/movie1.jpg" alt="image" class="image1">
+                    <img src= "{% static '/movie1.jpg' %}" alt="image" class="image1">
                     <p class="p">FAST & FURIOUS 9 </p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -27,7 +29,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="../static/movie1.jpg" alt="image" class="image1">
+                    <img src="{% static '/movie1.jpg' %}" alt="image" class="image1">
                     <p class="p">FAST & FURIOUS 9</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -35,7 +37,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="../static/movie1.jpg" alt="image" class="image1">
+                    <img src="{% static '/movie1.jpg' %}" alt="image" class="image1">
                     <p class="p">FAST & FURIOUS 9</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -44,7 +46,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="../static/movie1.jpg" alt="image" class="image1">
+                    <img src="{% static '/movie1.jpg' %}" alt="image" class="image1">
                     <p class="p">FAST & FURIOUS 9</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -53,7 +55,7 @@
 
 
                 <div class="container">
-                    <img src="../static/movie1.jpg" alt="image" class="image1">
+                    <img src="{% static '/movie1.jpg' %}" alt="image" class="image1">
                     <p class="p">FAST & FURIOUS 9</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -82,7 +84,7 @@
 
 
                 <div class="container">
-                    <img src="../static/wseries2.jpg" alt="image" class="image1">
+                    <img src="{% static '/wseries2.jpg' %}"alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -90,7 +92,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="../static/wseries2.jpg" alt="image" class="image1">
+                    <img src="{% static '/wseries2.jpg' %}" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -98,7 +100,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="../static/wseries2.jpg" alt="image" class="image1">
+                    <img src="{% static '/wseries2.jpg' %}" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -107,7 +109,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="../static/wseries2.jpg" alt="image" class="image1">
+                    <img src="{% static '/wseries2.jpg' %}" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -116,7 +118,7 @@
 
 
                 <div class="container">
-                    <img src="../static/wseries2.jpg" alt="image" class="image1">
+                    <img src="{% static '/wseries2.jpg' %}" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -142,7 +144,7 @@
 
 
                 <div class="container">
-                    <img src="../static/wseries2.jpg" alt="image" class="image1">
+                    <img src="{% static '/wseries2.jpg' %}" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -150,7 +152,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="../static/wseries2.jpg" alt="image" class="image1">
+                    <img src="{% static '/wseries2.jpg' %}" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -158,7 +160,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="../static/wseries2.jpg" alt="image" class="image1">
+                    <img src="{% static '/wseries2.jpg' %}" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -167,7 +169,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="../static/wseries2.jpg" alt="image" class="image1">
+                    <img src="{% static '/wseries2.jpg' %}" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -176,7 +178,7 @@
 
 
                 <div class="container">
-                    <img src="../static/wseries2.jpg" alt="image" class="image1">
+                    <img src="{% static '/wseries2.jpg' %}" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
