--- a/MyProject/Templates/webpages/webseries.html
+++ b/MyProject/Templates/webpages/webseries.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% load static %}
+
 
 
     {% block content %}
@@ -20,7 +22,7 @@
                 <a class="Arrow" href="#"><i class="fa">&#xf053;</i></a>
 
                 <div class="container">
-                    <img src="../static/movie1.jpg" alt="image" class="image1">
+                    <img src="{% static '/movie1.jpg' %}" alt="image" class="image1">
                     <p class="p">FAST & FURIOUS 9 </p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -28,7 +30,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="../static/movie1.jpg" alt="image" class="image1">
+                    <img src="{% static '/movie1.jpg' %}" alt="image" class="image1">
                     <p class="p">FAST & FURIOUS 9</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -36,7 +38,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="../static/movie1.jpg" alt="image" class="image1">
+                    <img src="{% static '/movie1.jpg' %}" alt="image" class="image1">
                     <p class="p">FAST & FURIOUS 9</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -45,7 +47,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="../static/movie1.jpg" alt="image" class="image1">
+                    <img src="{% static '/movie1.jpg' %}" alt="image" class="image1">
                     <p class="p">FAST & FURIOUS 9</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -54,7 +56,7 @@
 
 
                 <div class="container">
-                    <img src="../static/movie1.jpg" alt="image" class="image1">
+                    <img src="{% static '/movie1.jpg' %}" alt="image" class="image1">
                     <p class="p">FAST & FURIOUS 9</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -82,7 +84,7 @@
 
 
                 <div class="container">
-                    <img src="../static/wseries2.jpg" alt="image" class="image1">
+                    <img src="{% static '/wseries2.jpg' %}" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -90,7 +92,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="../static/wseries2.jpg" alt="image" class="image1">
+                    <img src="{% static '/wseries2.jpg' %}" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -98,7 +100,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="../static/wseries2.jpg" alt="image" class="image1">
+                    <img src="{% static '/wseries2.jpg' %}" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -107,7 +109,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="../static/wseries2.jpg" alt="image" class="image1">
+                    <img src="{% static '/wseries2.jpg' %}" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -116,7 +118,7 @@
 
 
                 <div class="container">
-                    <img src="../static/wseries2.jpg" alt="image" class="image1">
+                    <img src="{% static '/wseries2.jpg' %}" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -144,7 +146,7 @@
 
 
                 <div class="container">
-                    <img src="../static/wseries2.jpg" alt="image" class="image1">
+                    <img src="{% static '/wseries2.jpg' %}" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -152,7 +154,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="../static/wseries2.jpg" alt="image" class="image1">
+                    <img src="{% static '/wseries2.jpg' %}" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -160,7 +162,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="../static/wseries2.jpg" alt="image" class="image1">
+                    <img src="{% static '/wseries2.jpg' %}" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -169,7 +171,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="../static/wseries2.jpg" alt="image" class="image1">
+                    <img src="{% static '/wseries2.jpg' %}" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -178,7 +180,7 @@
 
 
                 <div class="container">
-                    <img src="../static/wseries2.jpg" alt="image" class="image1">
+                    <img src="{% static '/wseries2.jpg' %}" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -205,7 +207,7 @@
 
 
                 <div class="container">
-                    <img src="../static/wseries2.jpg" alt="image" class="image1">
+                    <img src="{% static '/wseries2.jpg' %}" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -213,7 +215,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="../static/wseries2.jpg" alt="image" class="image1">
+                    <img src="{% static '/wseries2.jpg' %}" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -221,7 +223,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="../static/wseries2.jpg" alt="image" class="image1">
+                    <img src="{% static '/wseries2.jpg' %}" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -230,7 +232,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="../static/wseries2.jpg" alt="image" class="image1">
+                    <img src="{% static '/wseries2.jpg' %}" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -239,7 +241,7 @@
 
 
                 <div class="container">
-                    <img src="../static/wseries2.jpg" alt="image" class="image1">
+                    <img src="{% static '/wseries2.jpg' %}" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -266,7 +268,7 @@
 
 
                 <div class="container">
-                    <img src="../static/wseries2.jpg" alt="image" class="image1">
+                    <img src="{% static '/wseries2.jpg' %}" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -274,7 +276,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="../static/wseries2.jpg" alt="image" class="image1">
+                    <img src="{% static '/wseries2.jpg' %}" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -282,7 +284,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="../static/wseries2.jpg" alt="image" class="image1">
+                    <img src="{% static '/wseries2.jpg' %}" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -291,7 +293,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="../static/wseries2.jpg" alt="image" class="image1">
+                    <img src="{% static '/wseries2.jpg' %}" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -300,7 +302,7 @@
 
 
                 <div class="container">
-                    <img src="../static/wseries2.jpg" alt="image" class="image1">
+                    <img src="{% static '/wseries2.jpg' %}" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -328,7 +330,7 @@
 
 
                 <div class="container">
-                    <img src="../static/wseries2.jpg" alt="image" class="image1">
+                    <img src="{% static '/wseries2.jpg' %}" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -336,7 +338,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="../static/wseries2.jpg" alt="image" class="image1">
+                    <img src="{% static '/wseries2.jpg' %}" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -344,7 +346,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="../static/wseries2.jpg" alt="image" class="image1">
+                    <img src="{% static '/wseries2.jpg' %}" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -353,7 +355,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="../static/wseries2.jpg" alt="image" class="image1">
+                    <img src="{% static '/wseries2.jpg' %}" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -362,7 +364,7 @@
 
 
                 <div class="container">
-                    <img src="../static/wseries2.jpg" alt="image" class="image1">
+                    <img src="{% static '/wseries2.jpg' %}" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
