about us page designing

--- a/MyProject/Templates/webpages/contact.html
+++ b/MyProject/Templates/webpages/contact.html
@@ -7,9 +7,6 @@
 
   <div class="bannerImage">
     <img src="https://cdn.pixabay.com/photo/2017/09/28/08/31/letters-2794672_960_720.jpg" alt="ContactImage" class="pixabayImage">
-    <h1>
-      Contact Us
-    </h1>
   </div>
   <h2 class="headingContact">
     Get in touch with Our Team
@@ -297,7 +294,9 @@
 
       </div>
 
-      
+      <div class=subjectContact>        
+        <input type="text" class="subjectpg" placeholder="Subject">
+      </div>
 
       <div class="MessageForm">
         <textarea class="form-control" rows="6" placeholder="Enter Your Message Here"></textarea>
