--- a/MyProject/MyProject/static/css/contactus.css
+++ b/MyProject/MyProject/static/css/contactus.css
@@ -28,13 +28,13 @@
   width: 17.5%;
 }
 
-.mb-3332 {
-  margin-top: 20px;
-  margin-left: 10px;
+.subjectContact{
+  margin-top: 30px;
+  margin-left: 115px;
 }
 
-.subjectForm {
-  width: 31.5%;
+.subjectpg{
+  width: 34.5%;
 }
 
 .MessageForm {
@@ -67,17 +67,6 @@ textarea{
   height: 360px;
 }
 
-.bannerImage h1 {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 35 px;
-  font-family: 'Montserrat', sans-serif;
-  font-weight: normal;
-  font-style: italic;
-  font-weight: bolder;
-}
 
 .headingContact{
   margin-top: 25px;
