--- a/MyProject/Templates/webpages/about.html
+++ b/MyProject/Templates/webpages/about.html
@@ -12,7 +12,10 @@
 
         <div class="aboutSecPg">
             <div class="imagePixabt">
-              <img src="https://cdn.pixabay.com/photo/2017/07/16/07/50/imprint-2508603_960_720.jpg" alt="About Us" class="img-about">
+
+              <img src="https://cdn.pixabay.com/photo/2017/07/16/07/50/imprint-2508603_960_720.jpg" 
+              alt="About Us" class="img-about">
+
             </div>
 
             <div class="ProjectSecpg">
@@ -31,19 +34,56 @@
                 </p>
             </div>
 
+<!----------------------------------- Founding members section------------------------------- -->
+
+
             <div>
                 <h2 class="foundingPg">Our Founders</h2>
 
-                <div class="container">
-                    <img src="https://www.vecteezy.com/vector-art/241137-boy-with-glasses" alt="image" class="image1">
-                    <p class="p">FAST & FURIOUS 9 </p>
-                                    
-                </div>
+                   <div class="ContainerAboutUs">
 
-                <div class="container">
-                    <img src="../static/movie1.jpg" alt="image" class="image1">
-                    <p class="p">FAST & FURIOUS 9</p>
-                           
+
+                        <div class="container">
+
+                            <div>
+                                <a href="https://www.instagram.com/">
+
+                                <img src="{% static 'Untitled design.jpg' %}" alt="image" 
+                                id="aboutPGfounder" class="image1">
+
+                                </a>
+
+                                <p class="p">SAYANDEEP SAHA</p>
+
+                            </div>
+
+                        </div>
+                        
+                        
+                                        
+                    
+
+                        <div class="container">
+
+                            <div class="aboutPGfounder33">
+
+                                    <a href="https://www.instagram.com/">
+
+                                    <img src="{% static 'Untitled design.jpg' %}" alt="image" 
+                                    class="image1">
+
+                                    </a>
+
+                                    <p class="p">KUNTAL PAUL</p>
+
+                            </div>
+
+                            
+                                
+                        </div>
+
+                    </div> 
+
                 </div>
 
 
