--- a/MyProject/Templates/base.html
+++ b/MyProject/Templates/base.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="{% static 'css/webseries.css' %}">
     <link rel="stylesheet" href="{% static 'css/contactus.css' %}">
     <link rel="stylesheet" href="{% static 'css/aboutus.css' %}">
+    <link rel="stylesheet" href="{% static 'css/profile.css' %}">
     
     <link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@1,300&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Quicksand:wght@300&display=swap" rel="stylesheet">
