--- a/MyProject/Templates/webpages/profile.html
+++ b/MyProject/Templates/webpages/profile.html
@@ -6,6 +6,82 @@
 
 {% block content %}
 
+<main class="FIprofile">
 
+    <section class="profileContainer">
+        
+        <div class="ProfileContainerHeading">
+
+            
+            <img src="https://image.freepik.com/free-vector/login-concept-illustration_114360-757.jpg" alt="Image Credit: Freepik.com">
+
+        </div>
+
+
+        <div class="login-Form">
+
+            <form>
+
+                <div class="ProfileFormLogIn">
+                    <input type="email" class="profileForm" placeholder="User Name">
+                  </div>
+          
+                  <div class="form-group">
+                    <input type="password" class="profileForm" placeholder="Password">
+                  </div>
+          
+          
+                  <button type="submit" class="ProfileSignIn">Sign In</button>
+                  <div class="ORtext">
+                    OR
+                  </div>
+          
+                  <button class="FacebookLogin">Facebook</button>
+                  <button class="GoogleLogin">Google</button>
+
+
+                  <div class="bottom-container">
+
+                    <div class="rowButton">
+
+                      <div >
+
+                          <button class="colButton11">
+                            <a href="#" style="color:rgb(14, 4, 4)" class="btnProfile">Sign Up</a>
+                          </button>
+                        
+                      </div>
+
+                      <div>
+
+                        <button class="colButton33">
+                            <a href="#" style="color:rgb(14, 3, 3)" class="btnPpage">Forgot Password ?</a>
+                        </button>
+                        
+                      </div>
+
+                    </div>
+
+                  </div>
+
+            </form>
+
+
+        </div>
+
+
+
+
+
+
+
+    </section>
+
+
+
+
+
+
+</main>
 
 {% endblock %}
